Bug 488929 - Sliding Popups effect doesn't look great with floating panels and widgets
Summary: Sliding Popups effect doesn't look great with floating panels and widgets
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.1.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 492263 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-06-21 21:06 UTC by Sauf
Modified: 2025-03-15 16:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
Floating panel window when hided. (247.96 KB, image/png)
2024-06-21 21:06 UTC, Sauf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sauf 2024-06-21 21:06:33 UTC
Created attachment 170787 [details]
Floating panel window when hided.

SUMMARY
Floating panel animation especially when the panel disappear has a tear or cut at the bottom of window. This is a minor issue but when resolved gives the more polished experience. Screenshot attached.

STEPS TO REPRODUCE
1. Open or close a floated panel.
2. bottom of panel doesn't sustain rounded UI.

OBSERVED RESULT
Window of panel has a cut at bottom.

EXPECTED RESULT
Bottom of panel sustain rounded border when hide or show.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.1.0
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.1
Kernel Version: 6.9.5-zen1-1-zen
Comment 1 Nate Graham 2024-06-25 20:32:39 UTC
Yeah, there's nothing wrong with this effect when applied to attached panels and widgets, but it doesn't look good with the floating versions.

I think we should make a new one that only applied to floating panels and widgets.
Comment 2 Nate Graham 2024-08-28 19:06:58 UTC
*** Bug 492263 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2024-10-02 22:38:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1203
Comment 4 Bug Janitor Service 2024-10-03 23:19:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1206
Comment 5 Niccolò Venerandi 2024-10-16 07:33:12 UTC
Git commit bd475258d714f4dd036399de987984a3ea974bfe by Niccolò Venerandi.
Committed on 16/10/2024 at 07:32.
Pushed by niccolove into branch 'master'.

Make slide animation start at the beginning of parent window for popups with margin

M  +25   -4    src/plasmaquick/popupplasmawindow.cpp

https://invent.kde.org/plasma/libplasma/-/commit/bd475258d714f4dd036399de987984a3ea974bfe