Do not apply slide effect for floating dialogs

If a popup is not directly touching its parent, having a sliding
effect will look off. We instead rely on the fading animation for
those instances.

BUG:488929